[package]
name = "buttons-analyzer"
version = "0.1.0"
edition = "2024"

[dependencies]
winit = { version = "0.30.12", default-features = false, features = ["wayland", "rwh_06"] }
softbuffer = { version = "0.4.6", default-features = false, features = ["wayland"] }
log = "0.4.28"
simple_logger = "5.0.0"
ringbuf = "0.4.8"
sparkles-core = "0.1.8"
csv = "1.3.1"
rodio = "0.21.1"
cpal = { version = "0.16.0" }
